[tool.poetry]
name = "peon-common"
version = "0.1.9"
description = "Shared peon-related utilities"
authors = ["creohex <paradise.source@gmail.com>"]
# readme = "README.md"
packages = [{include = "peon_common"}]

[tool.poetry.dependencies]
python = "^3.9.14"
asyncio = "^3.4.3"
discord2 = "2.0.1"
nltk = "3.7"
py-cord = "2.2.0"
pymongo = "4.3.3"
PyMySQL = "1.0.2"
pytest = "^7.2.2"
requests = "2.21.0"
wheel = "0.38.1"
psutil = "5.9.3"
# steamapi = {git = "https://github.com/smiley/steamapi.git"}
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
openai = "^0.28.1"
mongoengine = "^0.27.0"
beautifulsoup4 = "^4.12.3"
python-levenshtein = "^0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
