[tool.poetry]
name = "peon-discord"
version = "0.1.0"
description = "Peon discord client"
authors = ["creohex <paradise.source@gmail.com>"]
# readme = "README.md"
packages = [{include = "peon_discord"}]

[tool.poetry.dependencies]
python = "^3.9.14"
asyncio = "^3.4.3"
discord2 = "2.0.1"
nltk = "3.7"
py-cord = "2.2.0"
pymongo = "3.8.0"
PyMySQL = "1.0.2"
pytest = "^7.2.2"
python-telegram-bot = {version = "20.0a4", allow-prereleases = true}
requests = "2.21.0"
wheel = "0.38.1"
psutil = "5.9.3"
steamapi = {git = "https://github.com/smiley/steamapi.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
